--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
   "type": "library",
   "authors": [
     {
-      "name": "",
-      "email": ""
+      "name": "Nguyễn Anh Phương",
+      "email": "phuongna@elcom.com.vn"
     }
   ],
   "require": {
